test_regress/t/t_udp.out
%Error-UNSUPPORTED: t/t_udp.v:104:4: Unsupported: Verilog 1995 UDP Tables. Use --bbox-unsup to ignore tables.
  104 |    table
      |    ^~~~~
%Error: Exiting due to
